nginx-router/python-hello-web-bar-istio-service-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-hello-web-bar
  namespace: my-app
  labels:
    app: python-hello-web-bar
spec:
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  selector:
    app: python-hello-web-bar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-hello-web-bar
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-hello-web-bar
      version: v1
  template:
    metadata:
      labels:
        app: python-hello-web-bar
        version: v1
      namespace: my-app
    spec:
      containers:
      - image: haalcala/python-hello-web-bar-v1 
        imagePullPolicy: IfNotPresent
        name: python-hello-web-bar
        ports:
        - containerPort: 5000
