nginx-router/deploy-nginx-router.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-hello-web-foo-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: python-hello-web-foo-v1


---
apiVersion: v1
kind: Service
metadata:
  name: python-hello-web-bar-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: python-hello-web-bar-v1


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-hello-web-foo-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-hello-web-foo-v1
  template:
    metadata:
      labels:
        app: python-hello-web-foo-v1
    spec:
      containers:
      - name: python-hello-web-foo-v1
        image: haalcala/python-hello-web-foo-v1
        ports:
        - containerPort: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-hello-web-bar-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-hello-web-bar-v1
  template:
    metadata:
      labels:
        app: python-hello-web-bar-v1
    spec:
      containers:
      - name: python-hello-web-bar-v1
        image: haalcala/python-hello-web-bar-v1
        ports:
        - containerPort: 5000


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-hello-web-nginx
spec:
  replicas: 4
  selector:
    matchLabels:
      app: python-hello-web-nginx
  template:
    metadata:
      labels:
        app: python-hello-web-nginx
    spec:
      containers:
      - name: python-hello-web-nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: python-hello-web-foo
          mountPath: /etc/nginx/conf.d/python-hello-web-foo.conf # mount nginx-conf volumn to /etc/nginx
          subPath: python-hello-web-foo.conf
        - name: python-hello-web-bar
          mountPath: /etc/nginx/conf.d/python-hello-web-bar.conf # mount nginx-conf volumn to /etc/nginx
          subPath: python-hello-web-bar.conf
        #   readOnly: true
          
        - mountPath: /var/log/nginx
          name: log
      volumes:
      - name: python-hello-web-foo
        configMap:
          name: nginx-domains # place ConfigMap `nginx-conf` on /etc/nginx
          items:
        #     # - key: nginx.conf
        #     #   path: nginx.conf
            - key: python-hello-web-foo.conf
              path: python-hello-web-foo.conf # dig directory
      - name: python-hello-web-bar
        configMap:
          name: nginx-domains # place ConfigMap `nginx-conf` on /etc/nginx
          items:
        #     # - key: nginx.conf
        #     #   path: nginx.conf
            - key: python-hello-web-bar.conf
              path: python-hello-web-bar.conf # dig directory
      - name: log
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: python-hello-web-nginx-svc
spec:
  type: NodePort
  ports:
    - port: 443
      targetPort: 80
      protocol: TCP
  selector:
    app: python-hello-web-nginx

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "python-hello-web-alb-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "HTTPS"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/group: python-hello-web-nginx-svc
    alb.ingress.kubernetes.io/certificate-arn: AAA
  labels:
    app: python-hello-web-nginx-svc
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "python-hello-web-nginx-svc"
              servicePort: 443

---
# Application Load Balancer (ALB) Ingress Controller Deployment Manifest.
# This manifest details sensible defaults for deploying an ALB Ingress Controller.
# GitHub: https://github.com/kubernetes-sigs/aws-alb-ingress-controller
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: alb-ingress-controller
  name: alb-ingress-controller
  # Namespace the ALB Ingress Controller should run in. Does not impact which
  # namespaces it's able to resolve ingress resource for. For limiting ingress
  # namespace scope, see --watch-namespace.
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: alb-ingress-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alb-ingress-controller
    spec:
      containers:
        - name: alb-ingress-controller
          args:
            # Limit the namespace where this ALB Ingress Controller deployment will
            # resolve ingress resources. If left commented, all namespaces are used.
            # - --watch-namespace=your-k8s-namespace

            # Setting the ingress-class flag below ensures that only ingress resources with the
            # annotation kubernetes.io/ingress.class: "alb" are respected by the controller. You may
            # choose any class you'd like for this controller to respect.
            - --ingress-class=alb
            - --cluster-name=mattermost-prod-test
            - --aws-vpc-id=vpc-1234567890
            - --aws-region=us-east-2

            # REQUIRED
            # Name of your cluster. Used when naming resources created
            # by the ALB Ingress Controller, providing distinction between
            # clusters.
            # - --cluster-name=devCluster

            # AWS VPC ID this ingress controller will use to create AWS resources.
            # If unspecified, it will be discovered from ec2metadata.
            # - --aws-vpc-id=vpc-xxxxxx

            # AWS region this ingress controller will operate in.
            # If unspecified, it will be discovered from ec2metadata.
            # List of regions: http://docs.aws.amazon.com/general/latest/gr/rande.html#vpc_region
            # - --aws-region=us-west-1

            # Enables logging on all outbound requests sent to the AWS API.
            # If logging is desired, set to true.
            # - --aws-api-debug
            # Maximum number of times to retry the aws calls.
            # defaults to 10.
            # - --aws-max-retries=10
          image: docker.io/amazon/aws-alb-ingress-controller:v1.1.4
      serviceAccountName: alb-ingress-controller
