nginx-router/python-hello-web-foobar-istio-gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: python-hello-web-foo-gateway
  namespace: my-app
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.mydomain.com"
    - "mydomain.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: python-hello-web-foo
  namespace: my-app
spec:
  hosts:
  - "foo.mydomain.com"
  gateways:
  - python-hello-web-foo-gateway
  http:
  - match:
    - headers:
        x-token:
          regex: .*
    route:
    - destination:
        port:
          number: 5000
        host: python-hello-web-foo
#    - uri:
#        prefix: /delay2
#        regex: /(.*)
#    rewrite:
#      uri: /
  route:
  - destination:
      port:
        number: 5000
      host: python-hello-web-foo
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: python-hello-web-bar
  namespace: my-app
spec:
  hosts:
  - "bar.mydomain.com"
  gateways:
  - python-hello-web-foo-gateway
  http:
  - match:
    - uri:
        prefix: /delay
    - uri:
        prefix: /delay2
#        regex: /(.*)
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 5000
        host: python-hello-web-bar
        subset: python-hello-web-bar-v1
  - route:
    - destination:
        port:
          number: 5000
        host: python-hello-web-bar
        subset: python-hello-web-bar-v1
      weight: 10
    - destination:
        port:
          number: 5000
        host: python-hello-web-bar
        subset: python-hello-web-bar-v2
      weight: 90
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: python-hello-web-bar-destination
  namespace: my-app
spec:
  host: python-hello-web-bar # interpreted as python-hello-web-bar.my-app.svc.cluster.local
  subsets:
  - name: python-hello-web-bar-v1
    labels:
      version: v1
  - name: python-hello-web-bar-v2
    labels:
      version: v2
